workspace = { members = ["rszlm-sys"] }

[package]
name = "rszlm"
version = "0.1.0"
edition = "2021"
authors = ["shiben. <benshi0v0@gmail.com>"]
description = "ZLMediaKit rust api"
repository = "https://github.com/BenLocal/rszlm"
keywords = ["zlm", "zlmediakit", "rszlm"]
license = "MIT"
readme = "README.md"

[dependencies]
rszlm-sys = { path = "rszlm-sys" }
once_cell = "1.8"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

[features]
default = ["static"]
static = ["rszlm-sys/static"]
webrtc = ["rszlm-sys/webrtc"]
