workspace = { members = ["rszlm-sys"] }

[package]
name = "rszlm"
version = "0.1.7"
edition = "2021"
authors = ["shiben. <benshi0v0@gmail.com>"]
description = "ZLMediaKit rust api"
repository = "https://github.com/BenLocal/rszlm"
keywords = ["zlm", "zlmediakit", "rszlm"]
license = "MIT"
readme = "README.md"

[dependencies]
rszlm-sys = { path = "rszlm-sys", version = "0.1" }
once_cell = "1.8"
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
http-body-util = { version = "0.1" }
futures-util = { version = "0.3", features = ["io"] }

[features]
default = []
static = ["rszlm-sys/static"]
webrtc = ["rszlm-sys/webrtc"]
