workspace = { members = ["examples/*", "rszlm-sys"] }

[package]
name = "rszlm"
version = "0.1.12"
edition = "2021"
authors = ["shiben. <benshi0v0@gmail.com>"]
description = "ZLMediaKit rust api"
repository = "https://github.com/BenLocal/rszlm"
keywords = ["zlm", "zlmediakit", "rszlm"]
license = "MIT"
readme = "README.md"

[dependencies]
rszlm-sys = { path = "rszlm-sys", version = "0.1" }
once_cell = "1.8"
anyhow = "1"

[features]
default = []
static = ["rszlm-sys/static"]
webrtc = ["rszlm-sys/webrtc"]
