[package]
name = "rszlm-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
openssl-sys = { version = "0.9", optional = true }


[features]
default = []
static = ["openssl-sys/vendored"]
webrtc = []
