[package]
name = "rszlm-sys"
version = "0.1.0"
edition = "2021"
authors = ["shiben. <benshi0v0@gmail.com>"]
description = "ZLMediaKit rust ffi api"
repository = "https://github.com/BenLocal/rszlm"
keywords = ["zlm", "zlmediakit", "rszlm", "rszlm-sys"]
license = "MIT"

[dependencies]
openssl-sys = { version = "0.9", optional = true }

[build-dependencies]
bindgen = "0.69"
pkg-config = "0.3"
openssl-sys = { version = "0.9", optional = true }
cc = "1"

[features]
default = []
static = ["openssl-sys/vendored"]
webrtc = []
