[package]
name = "rszlm-sys"
version = "0.1.2"
edition = "2021"
authors = ["shiben. <benshi0v0@gmail.com>"]
description = "ZLMediaKit rust ffi api"
repository = "https://github.com/BenLocal/rszlm"
keywords = ["zlm", "zlmediakit", "rszlm", "rszlm-sys"]
license = "MIT"

[lib]
doctest = false

[dependencies]
openssl-sys = { version = "0.9", optional = true }

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
openssl-sys = { version = "0.9", optional = true }
cc = "1"
cmake = "0.1"
num_cpus = "1.15"
regex = "1.5"
# prebuilt release download + extraction (pure-rust, no external commands)
ureq = "3"
flate2 = "1"
tar = "0.4"
zip = { version = "8", default-features = false, features = ["deflate"] }

[features]
default = []
static = ["openssl-sys/vendored"]
webrtc = []
