[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rszlm = { path = "../..", features = ["static"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
http-body-util = { version = "0.1" }
futures-util = { version = "0.3", features = ["io"] }
once_cell = "1.8"
anyhow = "1"
